# ProjectCS236

./: Automaton.h  BlockCommentAutomaton.cpp  CMakeLists.txt  CommentAutomaton.cpp  CommentAutomaton.h  Database.cpp  Database.h  DatalogProgram.cpp  DatalogProgram.h  EndOfFileAutomaton.cpp  Expression.cpp  Expression.h  Header.cpp  Header.h  IDAutomaton.cpp  IDAutomaton.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  MatcherAutomaton.cpp  NewLineAutomaton.h  Parameter.cpp  Parameter.h  Parser.cpp  Parser.h  ParserHelper.cpp  ParserHelper.h  PlainParameter.cpp  PlainParameter.h  Predicate.cpp  Predicate.h  Relation.cpp  Relation.h  Rule.cpp  Rule.h  StringAutomaton.cpp  Token.cpp  Token.h  Tuple.cpp  (+13 more)
1-70/: myOutputFile.txt
1-90/: myOutputFile.txt
Automata/: Automaton.cpp  Automaton.h  BlockCommentAutomaton.h  CommentAutomaton.cpp  EndOfFileAutomaton.h  MatcherAutomaton.h  NewLineAutomaton.cpp  StringAutomaton.h  UndefinedAutomata.cpp
Lab2PassOffCases/2-80/: myOutputFile.txt
Lab3PassOffCases/3-100/: myOutputFile.txt
Lab3PassOffCases/3-80/: myOutputFile.txt
Lab4PassOffCases/4-80/: myOutputFile.txt
